--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
+    <header>
+        <h1>Kumi's Pokedex!</h1>
+    </header>
+
+    <div >
+        <p>Our Pokemon include:</p>
+
+    </div>
     <script src="js/scripts.js"></script>
 </body>
+
 </html>
