--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
 
     <div >
-        <p>Our Pokemon include:</p>
+        <h4>Our Pokemon include:</h4>
 
     </div>
     <script src="js/scripts.js"></script>
