--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <h1>Kumi's Pokedex!</h1>
     </header>
 
-    <div >
+    <div>
         <h4>Our Pokemon include:</h4>
-
     </div>
+    <ul class='pokemon-list'></ul>
     <script src="js/scripts.js"></script>
 </body>
 
