--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         <h4>Our Pokemon include:</h4>
     </div>
     <ul class='pokemon-list'></ul>
+
+
+    <script src="js/promise-polyfill.js"></script>
+    <script src="js/fetch-polyfill.js"></script>
     <script src="js/scripts.js"></script>
 </body>
 
