adding Pokemon modals
If agreed, this commit will:
- add styles to the modal that brings up pokemon details
- edit the showDetails() function to bring up the modal with pokemon details: name, height and picture

--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
     <div>
         <h4>Our Pokemon include:</h4>
     </div>
+
     <ul class='pokemon-list'></ul>
 
+    <div id='modal-container'></div>
 
     <script src="js/promise-polyfill.js"></script>
     <script src="js/fetch-polyfill.js"></script>
