--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" shrink-to-fit="no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" shrink-to-fit='no'>
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -20,12 +20,10 @@
         <h4>Our Pokemon include:</h4>
     </div>
 
-    <div class="container">
-        <ul class='pokemon-list'></ul>
+    <ul class='pokemon-list'></ul>
 
-        <div class='modal'></div>
+    <div id='modal-container'></div>
 
-    </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
     </script>
