--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="modal-body" id="modal-body" style="color: black">
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" aria-labelledby="button">Close</button>
             </div>
         </div>
     </div>
